Revert to 2 personas: update Zara to be direct & sales-focused instead of enthusiastic

--- a/extensions/chat-bubble/blocks/chat-interface.liquid
+++ b/extensions/chat-bubble/blocks/chat-interface.liquid
@@ -67,11 +67,7 @@
         },
         {
           "value": "enthusiasticAssistant",
-          "label": "Zara - Enthusiastic & bubbly"
-        },
-        {
-          "value": "directAssistant",
-          "label": "Direct - Blunt & sales-focused"
+          "label": "Zara - Direct & sales-focused"
         }
       ],
       "default": "standardAssistant"
