--- a/extensions/chat-bubble/blocks/chat-interface.liquid
+++ b/extensions/chat-bubble/blocks/chat-interface.liquid
@@ -58,7 +58,7 @@
       "type": "color",
       "id": "chat_bubble_color",
       "label": "Chat Bubble Color",
-      "default": "#5046e4"
+      "default": "#2196f3"
     },
     {
       "type": "text",
